clean up naming to match prototype urls

--- a/src/main/locales/en/search/location.json
+++ b/src/main/locales/en/search/location.json
@@ -2,7 +2,7 @@
   "title": "Search for the court or tribunal - GOV.UK",
   "question": "What is the name or address of the court or tribunal?",
   "hint": {
-    "text": "You can find the name of the court or tribunal on a letter, email or text from HM Courts and Tribunal Services (HMCTS)."
+    "text": "If you have a letter, email or text from HM Courts and Tribunal Services (HMCTS), it will tell you the name or address of the court or tribunal."
   },
   "text": "Enter a court name, address, town or city",
   "button": "Continue"
