--- a/src/main/locales/cy/search/results.json
+++ b/src/main/locales/cy/search/results.json
@@ -1,7 +1,9 @@
 {
   "title": "Search for the court or tribunal - GOV.UK",
   "question": "What is the name or address of the court or tribunal?",
-  "hint": "If you have a letter, email or text from HM Courts and Tribunal Services (HMCTS), it will tell you the name or address of the court or tribunal.",
+  "hint": {
+    "text": "If you have a letter, email or text from HM Courts and Tribunal Services (HMCTS), it will tell you the name or address of the court or tribunal."
+  },
   "text": "Enter a court name, address, town or city",
   "button": "Continue"
 }
