--- a/src/main/locales/cy/search/location.json
+++ b/src/main/locales/cy/search/location.json
@@ -1,9 +1,22 @@
 {
-  "title": "Search for the court or tribunal - GOV.UK",
+  "title": "Search for contact details - Find a court or tribunal - GOV.UK",
+  "serviceName": "Find a court or tribunal",
   "question": "What is the name or address of the court or tribunal?",
-  "hint": {
-    "text": "If you have a letter, email or text from HM Courts and Tribunal Services (HMCTS), it will tell you the name or address of the court or tribunal."
-  },
+  "hint": "The name of the court or tribunal can be found on a letter, email or text from us.",
   "text": "Enter a court name, address, town or city",
-  "button": "Continue"
+  "button": "Continue",
+  "noResults": {
+    "p1": "There are no matching results.",
+    "p2": "Improve your search results by:",
+    "list": {
+      "li1": "double-checking your spelling",
+      "li2": "using fewer keywords",
+      "li3": "searching for something less specific"
+    }
+  },
+  "foundResults": "We found {total} courts or tribunals matching your search for '{search}'",
+  "error":{
+    "title": "There is a problem",
+    "text": "Field is blank - Enter a court name, address, town or city"
+  }
 }
