--- a/src/main/locales/en/search/option.json
+++ b/src/main/locales/en/search/option.json
@@ -1,7 +1,8 @@
 {
-  "title": "Do you know the court or tribunal name - GOV.UK",
+  "title": "What do you want to do? - Find a court or tribunal - GOV.UK",
+  "serviceName": "Find a court or tribunal",
   "question": "Do you know the name of the court or tribunal?",
-  "hint": "You can find the name of the court or tribunal on a letter, email or text from HM Courts and Tribunal Services (HMCTS).",
+  "hint": "The name of the court or tribunal can be found on a letter, email or text from us.",
   "answers": {
     "a1": "I have the name",
     "a2": "I do not have the name"
