fixing the locales file and using them in html

--- a/src/main/locales/en/court-details.json
+++ b/src/main/locales/en/court-details.json
@@ -1,19 +1,29 @@
 {
   "title": "Find a court or tribunal - GOV.UK",
   "serviceName": "Find a court or tribunal",
-  "p1": "Use this service to find a court or tribunal in England and Wales",
-  "bullets": ["address", "contact details", "opening times", "building information e.g. disabled access or parking", "to help me get an update"],
-  "button": "Start now",
-  "h2": "Before you search",
-  "p1_text": "The online service is also available in ",
-  "p1_link": "/?lng=cy",
-  "p1_link_text": "Welsh (Cymraeg)",
-  "p2_text":"You cannot use this service if you live in Northern Ireland. Contact the ",
-  "p2_link_text": "Northern Ireland Courts and Tribunals",
-  "p2_text2":" for help",
-  "p3_text": "This service is limited in Scotland to:",
-  "bullets2": ["Immigration appeals", "Benefit appeals", "Employment claims appeals"],
-  "p4_text": "Contact the ",
-  "p4_link_text": "Scottish Courts and Tribunals",
-  "p4_text2":" for other services"
+  "notInPersonP1": "This location services {{ catchmentArea }} for {{ results['service_area'] }}. We do not provide an in-person service.",
+  "contactUsHeading": "Contact us",
+  "addressHeading": "Address",
+  "directionsText": "Get directions",
+  "visitingExpectationText": "What to expect coming to a court or tribunal",
+  "additionalInfoHeading": "Additional Information",
+  "openingTimesHeading": "Opening times",
+  "emailHeading": "Email",
+  "telephoneHeading": "Telephone",
+  "buildingFacilitiesHeading": "Building facilities",
+  "buildingFacilitiesP1": "If you have a disability and need help coming to a hearing, please contact",
+  "translatorsOrInterpretersHeading": "Translators or Interpreters",
+  "translatorsOrInterpretersText": "Get an interpreter at a court or tribunal.",
+  "areasOfLawHeading": "This location handles",
+  "relatedContentHeading": "Related content",
+  "claimApplicationText": "starting a money claim application",
+  "divorceApplicationText": "starting a divorce application",
+  "civilPartnershipText": "ending a civil partnership",
+  "probateApplicationText": "starting a probate application",
+  "usefulLinksHeading": "Useful links",
+  "complaintText": "Contact us to make a complaint",
+  "courtCodesHeading": "Court codes for legal professionals",
+  "crownCourtCodeText": "Crown Court location code",
+  "countyCourtCodeText": "County Court location code",
+  "magistratesCourtCodeText": "Magistrates' Court location code"
 }
