--- a/src/main/locales/en/court-details.json
+++ b/src/main/locales/en/court-details.json
@@ -11,7 +11,7 @@
   "emailHeading": "Email",
   "telephoneHeading": "Telephone",
   "buildingFacilitiesHeading": "Building facilities",
-  "buildingFacilitiesP1": "If you have a disability and need help coming to a hearing, please contact",
+  "buildingFacilitiesP1": "If you have a disability and need help coming to a hearing, please contact the court or tribunal to make sure the facilities meet your specific needs or to discuss a reasonable adjustment you need.",
   "translatorsOrInterpretersHeading": "Translators or Interpreters",
   "translatorsOrInterpretersText": "Get an interpreter at a court or tribunal.",
   "areasOfLawHeading": "This location handles",
