Add welsh templates

--- a/src/main/locales/cy/template.json
+++ b/src/main/locales/cy/template.json
@@ -1,4 +1,4 @@
 {
-  "feedback": "Mae hwn yn wasanaeth newydd - bydd eich <a class=\"govuk-link\" href=\"#\">adborth</a> yn ein helpu ni i’w wella. ",
-  "languageToggle": "<a href=\"?lng=en\" class=\"govuk-link fact-language\">English</a>"
+  "feedback": "This is a new service – your <a class=\"govuk-link\" href=\"#\">feedback</a> will help us to improve it. ",
+  "languageToggle": "<a href=\"?lng=cy\" class=\"govuk-link fact-language\">Cymraeg</a>"
 }
