--- a/src/main/locales/cy/court-details.json
+++ b/src/main/locales/cy/court-details.json
@@ -20,7 +20,7 @@
   "divorceApplicationText": "starting a divorce application",
   "civilPartnershipText": "ending a civil partnership",
   "probateApplicationText": "starting a probate application",
-  "usefulLinksHeading": "Useful links",
+  "complaintHeading": "Make a complaint",
   "complaintText": "Contact us to make a complaint",
   "courtCodesHeading": "Court codes for legal professionals",
   "crownCourtCodeText": "Crown Court location code",
