FACT-59: Clean up.

--- a/src/main/locales/en/childcare-and-parenting-area-of-law.json
+++ b/src/main/locales/en/childcare-and-parenting-area-of-law.json
@@ -8,6 +8,6 @@
   "button": "Continue",
   "error": {
     "title": "There is a problem",
-    "text": "Select what kind of help you need childcare and parenting"
+    "text": "Select what kind of help you need with childcare and parenting"
   }
 }
