Add cucumber test

--- a/src/main/locales/cy/unknownService.json
+++ b/src/main/locales/cy/unknownService.json
@@ -1,5 +1,5 @@
 {
-  "title": "Find a court or tribunal - GOV.UK",
+  "title": "Unknown service - Find a court or tribunal - GOV.UK",
   "serviceName": "Find a court or tribunal",
   "h1": "Sorry, we couldn't help you",
   "p_1": "If you have a letter, email or text from HM Courts and Tribunals Service (HMCTS), a court or a tribunal check it for contact details of the court or tribunal.",
