FACT-81: Clean up and add data to page.

--- a/src/main/locales/en/service-results.json
+++ b/src/main/locales/en/service-results.json
@@ -1,6 +1,8 @@
 {
-  "title": "SEARCH RESULTS - Find a court or tribunal - GOV.UK",
+  "title": "Search for location - Find a court or tribunal - GOV.UK",
   "serviceName": "Find a court or tribunal",
-  "question": "SEARCH RESULTS",
-  "button": "Continue"
+  "question": "Court or tribunal search results",
+  "hint": "We manage your {service-area} applications at our central service centre. Find where to send your documents or ask about your application’s progress.",
+  "applyOnlineHeading": "Apply online",
+  "nameOfCourt": "{court-name}"
 }
