--- a/src/main/locales/en/search/location.json
+++ b/src/main/locales/en/search/location.json
@@ -4,7 +4,7 @@
   "question": "What is the name or address of the court or tribunal?",
   "hint": "The name of the court or tribunal can be found on a letter, email or text from us.",
   "text": "Enter a court name, address, town or city",
-  "button": "Continue",
+  "button": "Search",
   "noResults": {
     "p1": "There are no matching results.",
     "p2": "Improve your search results by:",
@@ -14,7 +14,8 @@
       "li3": "searching for something less specific"
     }
   },
-  "foundResults": "We found {total} courts or tribunals matching your search for '{search}'",
+  "foundResults": "We found {total} courts or tribunals matching your search for '{search}'.",
+  "mostRelevant": "Most relevant results displayed.",
   "error":{
     "title": "There is a problem",
     "text": "Field is blank - Enter a court name, address, town or city"
