FACT-183: add Accept-Language header to api call

--- a/src/main/locales/en/home.json
+++ b/src/main/locales/en/home.json
@@ -15,5 +15,6 @@
   "bullets2": ["Immigration appeals", "Benefit appeals", "Employment claims appeals"],
   "p4_text": "Contact the ",
   "p4_link_text": "Scottish Courts and Tribunals",
-  "p4_text2":" for other services"
+  "p4_text2":" for other services",
+  "href": "/search-option"
 }
