--- a/src/main/locales/cy/home.json
+++ b/src/main/locales/cy/home.json
@@ -15,5 +15,6 @@
   "bullets2": ["WELSH Immigration appeals", "WELSH Benefit appeals", "WELSH Employment claims appeals"],
   "p4_text": "WELSH Contact the ",
   "p4_link_text": "WELSH Scottish Courts and Tribunals",
-  "p4_text2":" WELSH for other services"
+  "p4_text2":" WELSH for other services",
+  "href": "/search-option?lng=cy"
 }
