--- a/src/main/locales/cy/search/location.json
+++ b/src/main/locales/cy/search/location.json
@@ -5,6 +5,7 @@
   "hint": "The name of the court or tribunal can be found on a letter, email or text from us.",
   "text": "Enter a court name, address, town or city",
   "button": "Search",
+  "textExample": "For example, Blackburn Family Court. ",
   "noResults": {
     "p1": "There are no matching results.",
     "p2": "Improve your search results by:",
@@ -16,8 +17,12 @@
   },
   "foundResults": "We found {total} courts or tribunals matching your search for '{search}'.",
   "mostRelevant": "Most relevant results displayed.",
-  "error":{
+  "errorBlank": {
     "title": "There is a problem",
-    "text": "Field is blank - Enter a court name, address, town or city"
+    "text": "Enter a court name, address, town or city"
+  },
+  "errorTooShort": {
+    "title": "There is a problem",
+    "text": "Search must be 3 characters or more"
   }
 }
