FACT-81: Update tests.

--- a/src/main/locales/en/service-results.json
+++ b/src/main/locales/en/service-results.json
@@ -7,6 +7,6 @@
   "regionStatement": "This location provides services for all of England and Wales.",
   "nameOfCourt": "{court-name}",
   "slug": "{slug}",
-  "applyOnline": "{applyOnline}",
-  "applyOnlineUrl": "{applyOnlineUrl}"
+  "onlineText": "{applyOnline}",
+  "onlineUrl": "{applyOnlineUrl}"
 }
