--- a/src/main/locales/cy/home.json
+++ b/src/main/locales/cy/home.json
@@ -1,19 +1,19 @@
 {
-  "title": "WELSH Find a court or tribunal - GOV.UK",
-  "serviceName": "WELSH Find a court or tribunal",
-  "p1": "WELSH Use this service to find a court or tribunal in England and Wales",
-  "bullets": ["WELSH address", "WELSH contact details", "WELSH opening times", "WELSH building information e.g. disabled access or parking", "WELSH to help me get an update"],
-  "button": "WELSH Start now",
-  "h2": "WELSH Before you search",
-  "p1_text": "WELSH The online service is also available in ",
+  "title": "Dod o hyd i lys neu dribiwnlys - GOV.UK",
+  "serviceName": "Dod o hyd i lys neu dribiwnlys",
+  "p1": "Defnyddio’r gwasanaeth hwn i ddod o hyd i lys neu dribiwnlys yng Nghymru neu Loegr",
+  "bullets": ["cyfeiriad", "manylion cyswllt", "amseroedd agor", "gwybodaeth am yr adeilad e.e. mynediad i’r anabl neu barcio", "fy helpu i gael diweddariad"],
+  "button": "Dechrau rŵan",
+  "h2": "Cyn chwilio",
+  "p1_text": "Mae’r gwasanaeth ar-lein ar gael hefyd yn ",
   "p1_link": "/?lng=en",
-  "p1_link_text": "English (English)",
-  "p2_text":"WELSH You cannot use this service if you live in Northern Ireland. Contact the ",
-  "p2_link_text": "WELSH Northern Ireland Courts and Tribunals",
-  "p2_text2":" WELSH for help",
-  "p3_text": "WELSH This service is limited in Scotland to:",
-  "bullets2": ["WELSH Immigration appeals", "WELSH Benefit appeals", "WELSH Employment claims appeals"],
-  "p4_text": "WELSH Contact the ",
-  "p4_link_text": "WELSH Scottish Courts and Tribunals",
-  "p4_text2":" WELSH for other services"
+  "p1_link_text": "Saesneg (English)",
+  "p2_text":"Ni ellir defnyddio’r gwasanaeth hwn yng Ngogledd Iwerddon. Cysyllter â ",
+  "p2_link_text": "llysoedd a thribiwnlysoedd Gogledd Iwerddon  ",
+  "p2_text2":" am gymorth",
+  "p3_text": "Cyfyngir y gwasanaeth hwn yn Yr Alban i:",
+  "bullets2": ["Apeliadau mewnfudo", "Apeliadau budd-daliadau", "Apeliadau hawliadau cyflogaeth"],
+  "p4_text": "Cysyllter â ",
+  "p4_link_text": "llysoedd a thribiwnlysoedd Yr Alban",
+  "p4_text2":" ynglŷn â gwasanaethau eraill"
 }
