--- a/src/main/locales/cy/service.json
+++ b/src/main/locales/cy/service.json
@@ -1,13 +1,13 @@
 {
-  "title": "Choose an area of law - {serviceChosen} - Find a court or tribunal - GOV.UK",
-  "serviceName": "Find a court or tribunal",
-  "question": "What kind of help do you need with {serviceChosen}?",
+  "title": "Dewiswch faes cyfreithiol - {serviceChosen} - Dod o hyd i lys neu dribiwnlys - GOV.UK",
+  "serviceName": "Dod o hyd i lys neu dribiwnlys",
+  "question": "Dewiswch pa fath o help sydd ei angen arnoch mewn perthynas ag {serviceChosen}?",
   "answers": {
-    "a1": "I can't find what I'm looking for"
+    "a1": "Alla i ddim dod o hyd i'r hyn yr ydw i’n chwilio amdano"
   },
-  "button": "Continue",
+  "button": "Parhau",
   "error": {
-    "title": "There is a problem",
-    "text": "Select what kind of help you need with {serviceChosen}"
+    "title": "Mae yna broblem",
+    "text": "Dewiswch pa fath o help sydd ei angen arnoch mewn perthynas ag {serviceChosen}"
   }
 }
