--- a/src/main/locales/cy/unknownService.json
+++ b/src/main/locales/cy/unknownService.json
@@ -1,6 +1,6 @@
 {
-  "title": "Unknown service - Find a court or tribunal - GOV.UK",
-  "serviceName": "Find a court or tribunal",
+  "title": "Unknown service - Dod o hyd i lys neu dribiwnlysl - GOV.UK",
+  "serviceName": "Dod o hyd i lys neu dribiwnlys",
   "h1": "Sorry, we couldn't help you",
   "p_1": "If you have a letter, email or text from HM Courts and Tribunals Service (HMCTS), a court or a tribunal check it for contact details of the court or tribunal.",
   "h2_1": "Find the court or tribunal by name, address, town or city",
