--- a/src/main/locales/cy/search/option.json
+++ b/src/main/locales/cy/search/option.json
@@ -1,15 +1,15 @@
 {
-  "title": "What do you want to do? - Find a court or tribunal - GOV.UK",
-  "serviceName": "Find a court or tribunal",
-  "question": "Do you know the name of the court or tribunal?",
-  "hint": "The name of the court or tribunal can be found on a letter, email or text from us.",
+  "title": "Beth ydych chi eisiau ei wneud? - Dod o hyd i lys neu dribiwnlys - GOV.UK",
+  "serviceName": "Dod o hyd i lys neu dribiwnlys",
+  "question": "A ydych chi’n gwybod enw’r llys neu’r tribiwnlys?",
+  "hint": "Gellir gweld enw’r llys neu’r tribiwnlys ar lythyr, -bos neu neges destun a anfonwyd gennym.",
   "answers": {
-    "a1": "I have the name",
-    "a2": "I do not have the name"
+    "a1": "Mae’r enw gennyf",
+    "a2": "Nid yw’r enw gennyf"
   },
-  "button": "Continue",
+  "button": "Parhau",
   "error":{
-    "title": "There is a problem",
-    "text": "Field is blank - Select if you have the name or not"
+    "title": "Mae yna broblem",
+    "text": "Mae’r blwch yn wag – Dywedwch a yw’r enw gennych ai peidio"
   }
 }
