--- a/src/main/locales/en/postcode-results.json
+++ b/src/main/locales/en/postcode-results.json
@@ -4,5 +4,7 @@
   "question": "Court or tribunal search results",
   "hint": "We manage your {serviceArea} applications at our regional divorce units (RDU).",
   "secondHint": "Find where to send your documents or ask about your application’s progress.",
-  "applyOnlineHeading": "Apply online"
+  "multipleResultsHint": "We found {total} court or tribunal related to tax matching your search for '{postcode}'.",
+  "applyOnlineHeading": "Apply online",
+  "unit": "miles"
 }
