--- a/src/main/locales/en/court-details.json
+++ b/src/main/locales/en/court-details.json
@@ -10,6 +10,7 @@
   "openingTimesHeading": "Opening times",
   "emailHeading": "Email",
   "telephoneHeading": "Telephone",
+  "telephoneHeadingWelsh": "Welsh language",
   "telephoneAndFaxHeading": "Telephone and fax",
   "buildingFacilitiesHeading": "Building facilities",
   "buildingFacilitiesP1": "If you have a disability and need help coming to a hearing, please contact the court or tribunal to make sure the facilities meet your specific needs or to discuss a reasonable adjustment you need.",
