--- a/src/main/locales/cy/template.json
+++ b/src/main/locales/cy/template.json
@@ -1,4 +1,4 @@
 {
   "feedback": "Mae hwn yn wasanaeth newydd - bydd eich <a class=\"govuk-link\" href=\"#\">adborth</a> yn ein helpu ni i’w wella. ",
-  "languageToggle": "<a href=\"?lng=en\" class=\"govuk-link fact-language\">Saesneg</a>"
+  "languageToggle": "<a href=\"?lng=en\" class=\"govuk-link fact-language\">English</a>"
 }
