--- a/src/main/locales/cy/postcode-results.json
+++ b/src/main/locales/cy/postcode-results.json
@@ -2,8 +2,10 @@
   "title": "Search results for location - Find a court or tribunal - GOV.UK",
   "serviceName": "Find a court or tribunal",
   "question": "Court or tribunal search results",
-  "hint": "We manage your {serviceArea} applications at our regional divorce units (RDU).",
-  "secondHint": "Find where to send your documents or ask about your application’s progress.",
+  "divorceHint": "We manage your divorce applications at our regional divorce units (RDU).",
+  "civilHint": "We manage applications to end a civil partnership at our regional divorce units (RDU).",
+  "secondHint": "This is the nearest RDU to {postcode}",
+  "thirdHint": "Find where to send your documents or ask about your application’s progress.",
   "multipleResultsHint": "We found {total} court or tribunal related to {serviceArea} matching your search for '{postcode}'.",
   "applyOnlineHeading": "Apply online",
   "unit": "miles"
