--- a/src/main/locales/cy/unknownService.json
+++ b/src/main/locales/cy/unknownService.json
@@ -1,16 +1,16 @@
 {
-  "title": "Unknown service - Dod o hyd i lys neu dribiwnlysl - GOV.UK",
+  "title": "Gwasanaeth heb fod yn hysbys - Dod o hyd i lys neu dribiwnlysl - GOV.UK",
   "serviceName": "Dod o hyd i lys neu dribiwnlys",
-  "h1": "Sorry, we couldn't help you",
-  "p_1": "If you have a letter, email or text from HM Courts and Tribunals Service (HMCTS), a court or a tribunal check it for contact details of the court or tribunal.",
-  "h2_1": "Find the court or tribunal by name, address, town or city",
-  "a_1": "Search for the court by name, address, town or city",
-  "h2_2": "Court and tribunal fees",
-  "a_2": "See how much you pay for your claim or case",
-  "h2_3": "Find court and tribunal paper forms",
-  "a_3_1": "Find ",
-  "a_3_2": "court and tribunal forms",
-  "a_3_3": ", including divorce, probate, deed poll, money claim, help with fees and social security tribunal forms.",
-  "h2_4": "Specialist courts or tribunals",
-  "a_4": "List of criminal, civil and family courts and tribunals in England and Wales"
+  "h1": "Mae'n ddrwg gennym, doedden ni ddim yn gallu eich helpu chi",
+  "p_1": "Os oes gennych lythyr, e-bost neu neges destun gan Wasanaeth Llysoedd a Thribiwnlysoedd EM (GLlTEM), bydd llys neu dribiwnlys yn ei wirio am fanylion cyswllt.",
+  "h2_1": "Dewch o hyd i'r llys neu'r tribiwnlys yn ôl enw, cyfeiriad, tref neu ddinas",
+  "a_1": "Chwilio am y llys yn ôl enw, cyfeiriad, tref neu ddinas",
+  "h2_2": "Ffioedd llysoedd a thribiwnlysoedd",
+  "a_2": "Gweld faint rydych chi'n ei dalu am eich hawliad neu achos",
+  "h2_3": "Dod o hyd i ffurflenni papur llys a thribiwnlys",
+  "a_3_1": "Canfo ",
+  "a_3_2": "ffurflenni llys a thribiwnlys",
+  "a_3_3": ", gan gynnwys ysgariad, profiant, gweithred newid enw, hawlio arian, cymorth gyda ffioedd a ffurflenni tribiwnlys nawdd cymdeithasol.",
+  "h2_4": "Llysoedd neu dribiwnlysoedd arbenigol",
+  "a_4": "Rhestr o lysoedd a thribiwnlysoedd troseddol, sifil a theulu yng Nghymru a Lloegr"
 }
