--- a/src/main/locales/en/court-details.json
+++ b/src/main/locales/en/court-details.json
@@ -35,5 +35,9 @@
   "registerACText": "This location participates in this scheme",
   "registerACLink": "Register for the scheme",
   "learnACText": "This location does not participate in this scheme",
-  "learnACLink": "Learn about the scheme"
+  "learnACLink": "Learn about the scheme",
+  "callCharges": "Find out about call charges",
+  "processingTimes": "Processing or reply times",
+  "sendUsYourDocuments": "Send us your documents",
+  "updates": "Get an update with your application"
 }
