FACT-182: remove stray tab character

--- a/src/main/locales/cy/court-details.json
+++ b/src/main/locales/cy/court-details.json
@@ -38,6 +38,6 @@
   "learnACLink": "Dysgu am y cynllun",
   "callCharges": "Gwybodaeth am daliadau galwadau",
   "processingTimes": "Amseroedd prosesu neu ateb",
-  "sendUsYourDocuments": "\tAnfonwch eich dogfennau atom",
+  "sendUsYourDocuments": "Anfonwch eich dogfennau atom",
   "updates": "Cael diweddariad gyda'ch cais"
 }
