--- a/src/main/locales/cy/template.json
+++ b/src/main/locales/cy/template.json
@@ -1,4 +1,11 @@
 {
   "feedback": "Mae hwn yn wasanaeth newydd - bydd eich <a class=\"govuk-link\" href=\"#\">adborth</a> yn ein helpu ni i’w wella. ",
-  "languageToggle": "<a href=\"?lng=en\" class=\"govuk-link fact-language\">English</a>"
+  "languageToggle": "<a href=\"?lng=en\" class=\"govuk-link fact-language\">English</a>",
+  "help":"Help",
+  "contact": "Contact",
+  "privacy": "Privacy",
+  "cookies": "Cookies",
+  "accessibility": "Accessibility statement",
+  "termsAndConditions": "Terms and conditions",
+  "usingServicesInWelsh": "Rhestr o Wasanaethau Cymraeg"
 }
