--- a/src/main/locales/en/template.json
+++ b/src/main/locales/en/template.json
@@ -1,4 +1,11 @@
 {
   "feedback": "This is a new service – your <a class=\"govuk-link\" href=\"#\">feedback</a> will help us to improve it. ",
-  "languageToggle": "<a href=\"?lng=cy\" class=\"govuk-link fact-language\">Cymraeg</a>"
+  "languageToggle": "<a href=\"?lng=cy\" class=\"govuk-link fact-language\">Cymraeg</a>",
+  "help":"Help",
+  "contact": "Contact",
+  "privacy": "Privacy",
+  "cookies": "Cookies",
+  "accessibility": "Accessibility statement",
+  "termsAndConditions": "Terms and conditions",
+  "usingServicesInWelsh": "Rhestr o Wasanaethau Cymraeg"
 }
