Fact 180 back link (#140)
* FACT-180: Change referer policy and update controllers to use back path

* FACT-180: Implementation

* FACT-180: Functional tests

* FACT-180: Clean up

* FACT-180: Clean up

* FACT-180: Clean up and add welsh

--- a/src/main/locales/en/template.json
+++ b/src/main/locales/en/template.json
@@ -1,6 +1,7 @@
 {
   "feedback": "This is a new service – your <a class=\"govuk-link\" href=\"#\">feedback</a> will help us to improve it. ",
   "languageToggle": "<a href=\"?lng=cy\" class=\"govuk-link fact-language\">Cymraeg</a>",
+  "backLink": "Back",
   "help":"Help",
   "contact": "Contact",
   "privacy": "Privacy",
