--- a/src/main/locales/cy/postcode-results.json
+++ b/src/main/locales/cy/postcode-results.json
@@ -1,12 +1,12 @@
 {
-  "title": "Search results for location - Find a court or tribunal - GOV.UK",
-  "serviceName": "Find a court or tribunal",
-  "question": "Court or tribunal search results",
-  "divorceHint": "We manage your divorce applications at our regional divorce units (RDU).",
-  "civilHint": "We manage applications to end a civil partnership at our regional divorce units (RDU).",
-  "secondHint": "This is the nearest RDU to {postcode}",
-  "thirdHint": "Find where to send your documents or ask about your application’s progress.",
+  "title": "Canlyniadau chwilio ar gyfer lleoliad - Dod o hyd i lys neu dribiwnlys - GOV.UK",
+  "serviceName": "Dod o hyd i lys neu dribiwnlys",
+  "question": "Canlyniadau chwilio am lys neu dribiwnlys",
+  "divorceHint": "Rydym yn rheoli eich ceisiadau ysgariad yn ein hunedau ysgariad rhanbarthol (RDU).",
+  "civilHint": "Rydym yn rheoli ceisiadau i ddod â phartneriaethau sifil i ben yn ein hunedau ysgariad rhanbarthol (RDU).",
+  "secondHint": "Dyma'r RDU agosaf i {post code}",
+  "thirdHint": "Dewch o hyd i ble i anfon eich dogfennau neu holi am gynnydd eich cais.",
   "multipleResultsHint": "We found {total} court or tribunal related to {serviceArea} matching your search for '{postcode}'.",
-  "applyOnlineHeading": "Apply online",
-  "unit": "miles"
+  "applyOnlineHeading": "Gwnewch gais ar-lein",
+  "unit": "milltiroedd"
 }
