fix test and change hard coded text to locales

--- a/src/main/locales/en/court-details.json
+++ b/src/main/locales/en/court-details.json
@@ -39,5 +39,6 @@
   "callCharges": "Find out about call charges",
   "processingTimes": "Processing or reply times",
   "sendUsYourDocuments": "Send us your documents",
-  "updates": "Get an update with your application"
+  "updates": "Get an update with your application",
+  "altImageText": "Front view of"
 }
