--- a/src/main/locales/en/choose-service.json
+++ b/src/main/locales/en/choose-service.json
@@ -8,6 +8,6 @@
   "button": "Continue",
   "error": {
     "title": "There is a problem",
-    "text": "Select what do you want to know more about"
+    "text": "Select what you want to know more about"
   }
 }
