Remove field is blank from error message

--- a/src/main/locales/cy/search/option.json
+++ b/src/main/locales/cy/search/option.json
@@ -10,6 +10,6 @@
   "button": "Parhau",
   "error":{
     "title": "Mae yna broblem",
-    "text": "Mae’r blwch yn wag – Dywedwch a yw’r enw gennych ai peidio"
+    "text": "Dywedwch a yw’r enw gennych ai peidio"
   }
 }
