FACT-239: change "Additional information" to covid message

--- a/src/main/locales/cy/court-details.json
+++ b/src/main/locales/cy/court-details.json
@@ -6,7 +6,7 @@
   "addressHeading": "cyfeiriad",
   "directionsText": "Cael cyfarwyddiadau",
   "visitingExpectationText": "Beth i’w ddisgwyl wrth ddod i lys neu dribiwnlys",
-  "additionalInfoHeading": "Gwybodaeth Ychwanegol",
+  "additionalInfoHeading": "Diweddariad Coronafeirws (COVID-19)",
   "openingTimesHeading": "Amseroedd agor",
   "emailHeading": "E-bost",
   "telephoneHeading": "Rhif ffôn",
