--- a/src/main/locales/en/court-details.json
+++ b/src/main/locales/en/court-details.json
@@ -6,7 +6,7 @@
   "addressHeading": "Address",
   "directionsText": "Get directions",
   "visitingExpectationText": "What to expect coming to a court or tribunal",
-  "additionalInfoHeading": "Additional Information",
+  "additionalInfoHeading": "Coronavirus (COVID-19) Update",
   "openingTimesHeading": "Opening times",
   "emailHeading": "Email",
   "telephoneHeading": "Telephone",
