Fix choose action page error message

--- a/src/main/locales/cy/choose-action.json
+++ b/src/main/locales/cy/choose-action.json
@@ -12,6 +12,6 @@
   "button": "Parhau",
   "error": {
     "title": "Mae yna broblem",
-    "text": "Mae’r blwch yn wag - Beth ydych chi eisiau ei wneud?"
+    "text": "Beth ydych chi eisiau ei wneud?"
   }
 }
