fact 243 - welsh translation

--- a/src/main/locales/cy/choose-service.json
+++ b/src/main/locales/cy/choose-service.json
@@ -8,6 +8,6 @@
   "button": "Parhau",
   "error": {
     "title": "Mae yna broblem",
-    "text": "Dewiswch beth yr ydych chi’n awyddus i wybod mwy amdano"
+    "text": "Dewis beth yr ydych am wybod mwy amdano"
   }
 }
