fact 243 - welsh translation (2)

--- a/src/main/locales/cy/court-details.json
+++ b/src/main/locales/cy/court-details.json
@@ -39,5 +39,6 @@
   "callCharges": "Gwybodaeth am daliadau galwadau",
   "processingTimes": "Amseroedd prosesu neu ateb",
   "sendUsYourDocuments": "Anfonwch eich dogfennau atom",
-  "updates": "Cael diweddariad gyda'ch cais"
+  "updates": "Cael diweddariad gyda'ch cais",
+  "altImageText": "Tu blaen"
 }
