--- a/src/main/locales/cy/unknownService.json
+++ b/src/main/locales/cy/unknownService.json
@@ -11,6 +11,6 @@
   "a_3_1": "Canfo ",
   "a_3_2": "ffurflenni llys a thribiwnlys",
   "a_3_3": ", gan gynnwys ysgariad, profiant, gweithred newid enw, hawlio arian, cymorth gyda ffioedd a ffurflenni tribiwnlys nawdd cymdeithasol.",
-  "h2_4": "Llysoedd neu dribiwnlysoedd arbenigol",
+  "h2_4": "Holl lysoedd a thribiwnlysoedd GLlTEM",
   "a_4": "Rhestr o lysoedd a thribiwnlysoedd troseddol, sifil a theulu yng Nghymru a Lloegr"
 }
